# Arcade

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  compile.sh
.cache/clangd/index/: ADisplay.cpp.24E06E564D96E2E1.idx  ADisplay.hh.9D0D95E4D321412D.idx  EventEnum.hh.3FE23B8E93C94651.idx  IDisplay.hh.10D554F95B76F8DB.idx  IWindow.hh.11E710DAA0FB7050.idx  Nibbler.cpp.7830531C9C7E781D.idx  Snake.cpp.21D0E6B3FFCCCF64.idx  arcade.hh.0E0D9D1BFA40C835.idx  arcade.hh.4A21BB8CED5F420F.idx  arcade.hh.76E2805F6DDE87E3.idx  main.cpp.28DDD91F5059F9E6.idx  main.cpp.672F5591EA91086A.idx  main.cpp.AECB59E1BE0B3F36.idx  main.cpp.FBAF1A1D92099705.idx  ncurses.cpp.3F07149349B31EA3.idx  sdl.cpp.E1389D5273C1EA43.idx  sfml.cpp.7324071A0652E02F.idx
.github/workflows/: arcade_workflow.yml
Core/include/arcade/: Core.hh  Geometry.hh  Opts.hh  RuntimeExecption.hh  arcade.hh
Core/include/arcade/core/: CoreClock.hh  Menu.hh
Core/include/arcade/enum/: EventEnum.hh
Core/include/arcade/interfaces/: ADisplay.hh  ASprite.hh  AText.hh  IDisplay.hh  IEntity.hh  IFactory.hh  IGame.hh  ISprite.hh  IText.hh  IWindow.hh
Core/src/: ADisplay.cpp  AEntity.cpp  ASprite.cpp  AText.cpp  Geometry.cpp  main.cpp
Core/src/core/: Core.cpp  CoreClock.cpp  RuntimeException.cpp  coreHandingInfos.cpp  gameLoop.cpp  libsMethods.cpp
Core/src/core/menu/: Menu.cpp
Core/src/opts/: Opts.cpp  libFactory.cpp
Games/: CMakeLists.txt  README.md
Games/Nibbler/: CMakeLists.txt
Games/Nibbler/include/Nibbler/: ClockNibbler.hh  Commons.hh  Error.hh  Nibbler.hh  NibblerGame.hh
Games/Nibbler/src/: ClockNibbler.cpp  EntryPoint.cpp  Error.cpp  Nibbler.cpp  NibblerGame.cpp  NibblerInitGame.cpp
Games/Snake/: CMakeLists.txt
Games/Snake/include/Snake/: Commons.hh  Snake.hh  SnakeGame.hh
Games/Snake/src/: EntryPoint.cpp  Snake.cpp  SnakeGame.cpp
Graphics/: CMakeLists.txt
Graphics/Ncurses/: CMakeLists.txt
Graphics/Ncurses/include/ncurses/: NCurses.hh  NCursesDisplay.hh  NCursesWindow.hh
Graphics/Ncurses/include/ncurses/entities/: NCursesSprite.hh  NCursesText.hh
Graphics/Ncurses/src/: NCurses.cpp  NCursesDisplay.cpp  NCursesWindow.cpp  ncurses.cpp
Graphics/Ncurses/src/entities/: NCursesSprite.cpp  NCursesText.cpp
Graphics/SDL/: CMakeLists.txt
Graphics/SDL/include/SDL/: SDL.hh  SDLDisplay.hh  SDLWindow.hh
Graphics/SDL/include/SDL/entities/: SDLFont.hh  SDLSprite.hh  SDLSurface.hh  SDLText.hh
Graphics/SDL/src/: SDL.cpp  SDLDisplay.cpp  SDLWindow.cpp  sdl.cpp
Graphics/SDL/src/entities/: SDLFont.cpp  SDLSprite.cpp  SDLSurface.cpp  SDLText.cpp
Graphics/SFML/: CMakeLists.txt
Graphics/SFML/include/SFML/: SFML.hh  SFMLDisplay.hh  SFMLWindow.hh
Graphics/SFML/include/SFML/entities/: SFMLSprite.hh  SFMLText.hh  SFMLTexture.hh
Graphics/SFML/src/: SFML.cpp  SFMLDisplay.cpp  SFMLWindow.cpp  sfml.cpp
Graphics/SFML/src/entities/: SFMLSprite.cpp  SFMLText.cpp  SFMLTexture.cpp
assets/map/: map1  map2  map3
core/include/arcade/: arcade.hh
core/include/arcade/interfaces/: IDisplay.hh
core/src/: main.cpp
docs/: CMake.md  Core.md  Games.md  Graphics.md  README.md  Relations.md
graphics/SFML/include/: SFMLDisplay.hh
graphics/include/: ADisplay.hh
graphics/src/: ADisplay.cpp
include/arcade/: Vector.hh
include/arcade/SFML/entities/: SFMLTexture.hh
include/arcade/enum/: EventEnum.hh
include/arcade/interface/: IDisplay.hh  IWindow.hh
include/arcade/interfaces/: AEntity.hh  IDisplay.hh  IEntity.hh  IWindow.hh
include/arcade/interfaces/entities/: AEntity.hh  IEntity.hh
include/interface/: IDisplay.hh
src/SFML/entities/: SFMLSprite.cpp  SFMLTexture.cpp
src/interfaces/: AEntity.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp
tests/src/Core/: optsTest.cpp
